# Ignotum

./: .gitignore  .gitmodules  CMakeLists.txt
include/: Assembler.hpp  Cryptography.hpp  Main.hpp  MappedMemory.hpp  Parameter.hpp  PeFile.hpp  Translation.hpp  TranslationContext.hpp  VMGadgets.hpp  Virtual.hpp  Win32.hpp
include/NativeEmitter/: NativeEmitter.hpp  x64NativeEmitter.hpp
include/utl/: Result.hpp  Utl.hpp  nResult.hpp
src/: Assembler.cpp  Lib.cpp  Main.cpp  MappedMemory.cpp  Parameter.cpp  PeFile.cpp  Translation.cpp  VMGadgets.cpp  Virtual.cpp
